Fix footer alignment

--- a/support-frontend/assets/pages/digital-subscription-landing/components/digitalSubscriptionLanding.scss
+++ b/support-frontend/assets/pages/digital-subscription-landing/components/digitalSubscriptionLanding.scss
@@ -53,7 +53,6 @@ $teal-green: #006d67;
   background-color: #ffffff;
 }
 
-
 .hope-is-power--centered,
 .component-customer-service {
   align-self: flex-start;
@@ -86,6 +85,46 @@ $teal-green: #006d67;
     max-width: 80.625rem;
   }
 }
+
+.footer-container {
+  background-color: gu-colour('brand-main');
+  align-self: flex-start;
+  width: 100%;
+
+  .footer-alignment {
+    padding-left: 0px;
+    @include mq($from: mobileLandscape) {
+      padding-left: 0px;
+    }
+
+    @include mq($from: phablet) {
+      align-self: center;
+      width: 100%;
+    }
+
+    @include mq($from: tablet) {
+      padding-left: 20px;
+      width: calc(100% - 20px);
+    }
+
+    @include mq($from: desktop) {
+      max-width: calc(100% - 110px);
+      max-width: 1100px;
+    }
+
+    @include mq($from: leftCol) {
+      padding-left: 40px;
+      width: calc(100% - 40px);
+      max-width: 80.625rem;
+    }
+
+    @include mq($from: 1396px) {
+      padding-left: 0;
+      margin: 0 auto;
+    }
+  }
+}
+
 
 .component-base-rows.component-base-rows--normal {
   .component-customer-service {
